# introduction-to-data-pipelines-and-apache-airflow

./: .gitignore  .tm_properties  LICENSE  README.md  play_with_env.py
airflow/: Dockerfile  README.md  docker-compose.yml
airflow/mnt/dags/: .airflowignore  day_3_dag.py  dog_api_pipeline.py  everyday_dag.py  play_with_airflow_connections_and_hooks.py  weather_api_dag.py  weather_dbt_dag.py
airflow/weather/: pyproject.toml  requirements.txt
airflow/weather/weather/: .user.yml  dbt_project.yml  profiles.yml
airflow/weather/weather/models/: my_model.sql
airflow/weather/weather/models/marts/: _models.yml  average_temperature_in_bangkok.sql
airflow/weather/weather/models/staging/: _models.yml  _src.yml  stg_weathers.sql
airflow/weather/weather/tests/: assert_temperature_not_greater_than_60.sql
demo_kwargs_and_args/: main.py
my_first_project/: my_first_data_pipeline.py  pyproject.toml
my_test/: main.py  utils.py
play_with_data_quality/: main.py  pyproject.toml
play_with_gx/: check.py  main.py  pyproject.toml
workspace/: Dockerfile  README.md  docker-compose.yml  my_first_data_pipeline.py  pyproject.toml
