[tool.poetry]
name = "play-with-data-quality"
version = "0.1.0"
description = ""
authors = ["Kan Ouivirach <zkan.cs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
