[tool.poetry]
name = "play-with-gx"
version = "0.1.0"
description = ""
authors = ["Kan Ouivirach <zkan.cs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
great-expectations = "^0.18.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
